# linode-image-lab

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: authoritative-source-check.yml  check.yml  region-policy-drift-review.yml
docs/: authoritative-source-check-smoke.md  capture-deploy.md  compliance.md  design.md  freeze-thaw.md  product-boundary.md  provider-assumptions.md  security.md  trusted-registry-firewall-sync.md
examples/: README.md
examples/cloud-init/: minimal.yaml
examples/config/: capture-deploy-smoke.toml  capture-replicate-deploy.example.toml  deploy-existing-image.toml  firewall-sync.example.toml
examples/geo/: geo-americas-deploy-validation.toml  geo-apac-north-deploy-validation.toml  geo-apac-southeast-deploy-validation.toml  geo-europe-deploy-validation.toml  geo-india-deploy-validation.toml  geo-oceania-deploy-validation.toml
examples/policy/: region-policy.example.toml
examples/smoke/: geo-americas-replication-smoke.toml  geo-apac-north-replication-smoke.toml  geo-apac-southeast-replication-smoke.toml  geo-europe-replication-smoke.toml  geo-india-replication-smoke.toml  geo-oceania-replication-smoke.toml
policy/: region-policy.toml
src/linode_image_lab/: __init__.py  capture.py  capture_deploy.py  capture_replicate_deploy.py  cleanup.py  cli.py  config.py  deploy.py  firewall_sync.py  freeze.py  linode_api.py  manifest.py  redaction.py  region_policy.py  regions.py  replicate.py  thaw.py  trusted_registry.py  user_data.py  validation.py  validation_results.py
(+18 files in other folders)
