[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "linode-image-lab"
version = "0.1.0"
description = "Public-safe Linode custom image capture and deploy workflow lab."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
linode-image-lab = "linode_image_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
